rule.output
Terminaux inutilisés dans la grammaire

   tVOID
   tRETURN
   tCOMMA
   tPRINTF
   tQUOTE


État 43 conflits: 1 décalage/réduction


Grammaire

    0 $accept: start $end

    1 start: tINTEGER tMAIN tBEGIN_PARENTHESIS tEND_PARENTHESIS Body

    2 Body: tBEGIN_BLOCK Instrs tEND_BLOCK

    3 Body_if: Instr
    4        | Body

    5 Instrs: Instr Instrs
    6       | Block Instrs
    7       | %empty

    8 Instr: Definition tEND_OF_INSTRUCTION
    9      | Assignment tEND_OF_INSTRUCTION
   10      | tEND_OF_INSTRUCTION

   11 Block: If
   12      | While
   13      | For

   14 Prefix: Type
   15       | tCONSTANT Type

   16 Type: tINTEGER
   17     | tCHAR
   18     | tSTRING

   19 Definition: Prefix tID
   20           | Prefix Assignment

   21 Assignment: tID tASSIGN Expr

   22 Assignment_sugar: tID tPLUS tPLUS
   23                 | tID tMINUS tMINUS

   24 For: tFOR tBEGIN_PARENTHESIS Assignment tEND_OF_INSTRUCTION Expr tEND_OF_INSTRUCTION Assignment tEND_PARENTHESIS Body
   25    | tFOR tBEGIN_PARENTHESIS Assignment Expr tEND_OF_INSTRUCTION Assignment_sugar tEND_PARENTHESIS Body

   26 If: tIF tBEGIN_PARENTHESIS Expr tEND_PARENTHESIS If_act Body_if
   27   | tIF tBEGIN_PARENTHESIS Expr tEND_PARENTHESIS If_act Body_if tELSE Body_if

   28 If_act: %empty

   29 While: tWHILE tBEGIN_PARENTHESIS Expr tEND_PARENTHESIS Body

   30 Expr: tNUMBER
   31     | tMINUS tNUMBER
   32     | tID
   33     | Expr tPLUS Expr
   34     | Expr tMINUS Expr
   35     | Expr tMULTIPLY Expr
   36     | Expr tDIVIDE Expr
   37     | Expr tGT Expr
   38     | Expr tGTE Expr
   39     | Expr tLT Expr
   40     | Expr tLTE Expr
   41     | Expr tEQUALITY Expr


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINTEGER (258) 1 16
tCONSTANT (259) 15
tCHAR (260) 17
tSTRING (261) 18
tNUMBER (262) 30 31
tID (263) 19 21 22 23 32
tVOID (264)
tIF (265) 26 27
tELSE (266) 27
tWHILE (267) 29
tFOR (268) 24 25
tMAIN (269) 1
tRETURN (270)
tCOMMA (271)
tBEGIN_PARENTHESIS (272) 1 24 25 26 27 29
tEND_PARENTHESIS (273) 1 24 25 26 27 29
tBEGIN_BLOCK (274) 2
tEND_BLOCK (275) 2
tEND_OF_INSTRUCTION (276) 8 9 10 24 25
tPRINTF (277)
tQUOTE (278)
tPLUS (279) 22 33
tMINUS (280) 23 31 34
tMULTIPLY (281) 35
tDIVIDE (282) 36
tASSIGN (283) 21
tGT (284) 37
tGTE (285) 38
tLT (286) 39
tLTE (287) 40
tEQUALITY (288) 41
tTRUC (289)


Non-terminaux, suivis des règles où ils apparaissent

$accept (35)
    à gauche: 0
start (36)
    à gauche: 1, à droite: 0
Body (37)
    à gauche: 2, à droite: 1 4 24 25 29
Body_if (38)
    à gauche: 3 4, à droite: 26 27
Instrs (39)
    à gauche: 5 6 7, à droite: 2 5 6
Instr (40)
    à gauche: 8 9 10, à droite: 3 5
Block (41)
    à gauche: 11 12 13, à droite: 6
Prefix (42)
    à gauche: 14 15, à droite: 19 20
Type (43)
    à gauche: 16 17 18, à droite: 14 15
Definition (44)
    à gauche: 19 20, à droite: 8
Assignment (45)
    à gauche: 21, à droite: 9 20 24 25
Assignment_sugar (46)
    à gauche: 22 23, à droite: 25
For (47)
    à gauche: 24 25, à droite: 13
If (48)
    à gauche: 26 27, à droite: 11
If_act (49)
    à gauche: 28, à droite: 26 27
While (50)
    à gauche: 29, à droite: 12
Expr (51)
    à gauche: 30 31 32 33 34 35 36 37 38 39 40 41, à droite: 21 24
    25 26 27 29 33 34 35 36 37 38 39 40 41


État 0

    0 $accept: . start $end

    tINTEGER  décalage et aller à l'état 1

    start  aller à l'état 2


État 1

    1 start: tINTEGER . tMAIN tBEGIN_PARENTHESIS tEND_PARENTHESIS Body

    tMAIN  décalage et aller à l'état 3


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 4


État 3

    1 start: tINTEGER tMAIN . tBEGIN_PARENTHESIS tEND_PARENTHESIS Body

    tBEGIN_PARENTHESIS  décalage et aller à l'état 5


État 4

    0 $accept: start $end .

    $défaut  accepter


État 5

    1 start: tINTEGER tMAIN tBEGIN_PARENTHESIS . tEND_PARENTHESIS Body

    tEND_PARENTHESIS  décalage et aller à l'état 6


État 6

    1 start: tINTEGER tMAIN tBEGIN_PARENTHESIS tEND_PARENTHESIS . Body

    tBEGIN_BLOCK  décalage et aller à l'état 7

    Body  aller à l'état 8


État 7

    2 Body: tBEGIN_BLOCK . Instrs tEND_BLOCK

    tINTEGER             décalage et aller à l'état 9
    tCONSTANT            décalage et aller à l'état 10
    tCHAR                décalage et aller à l'état 11
    tSTRING              décalage et aller à l'état 12
    tID                  décalage et aller à l'état 13
    tIF                  décalage et aller à l'état 14
    tWHILE               décalage et aller à l'état 15
    tFOR                 décalage et aller à l'état 16
    tEND_OF_INSTRUCTION  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 7 (Instrs)

    Instrs      aller à l'état 18
    Instr       aller à l'état 19
    Block       aller à l'état 20
    Prefix      aller à l'état 21
    Type        aller à l'état 22
    Definition  aller à l'état 23
    Assignment  aller à l'état 24
    For         aller à l'état 25
    If          aller à l'état 26
    While       aller à l'état 27


État 8

    1 start: tINTEGER tMAIN tBEGIN_PARENTHESIS tEND_PARENTHESIS Body .

    $défaut  réduction par utilisation de la règle 1 (start)


État 9

   16 Type: tINTEGER .

    $défaut  réduction par utilisation de la règle 16 (Type)


État 10

   15 Prefix: tCONSTANT . Type

    tINTEGER  décalage et aller à l'état 9
    tCHAR     décalage et aller à l'état 11
    tSTRING   décalage et aller à l'état 12

    Type  aller à l'état 28


État 11

   17 Type: tCHAR .

    $défaut  réduction par utilisation de la règle 17 (Type)


État 12

   18 Type: tSTRING .

    $défaut  réduction par utilisation de la règle 18 (Type)


État 13

   21 Assignment: tID . tASSIGN Expr

    tASSIGN  décalage et aller à l'état 29


État 14

   26 If: tIF . tBEGIN_PARENTHESIS Expr tEND_PARENTHESIS If_act Body_if
   27   | tIF . tBEGIN_PARENTHESIS Expr tEND_PARENTHESIS If_act Body_if tELSE Body_if

    tBEGIN_PARENTHESIS  décalage et aller à l'état 30


État 15

   29 While: tWHILE . tBEGIN_PARENTHESIS Expr tEND_PARENTHESIS Body

    tBEGIN_PARENTHESIS  décalage et aller à l'état 31


État 16

   24 For: tFOR . tBEGIN_PARENTHESIS Assignment tEND_OF_INSTRUCTION Expr tEND_OF_INSTRUCTION Assignment tEND_PARENTHESIS Body
   25    | tFOR . tBEGIN_PARENTHESIS Assignment Expr tEND_OF_INSTRUCTION Assignment_sugar tEND_PARENTHESIS Body

    tBEGIN_PARENTHESIS  décalage et aller à l'état 32


État 17

   10 Instr: tEND_OF_INSTRUCTION .

    $défaut  réduction par utilisation de la règle 10 (Instr)


État 18

    2 Body: tBEGIN_BLOCK Instrs . tEND_BLOCK

    tEND_BLOCK  décalage et aller à l'état 33


État 19

    5 Instrs: Instr . Instrs

    tINTEGER             décalage et aller à l'état 9
    tCONSTANT            décalage et aller à l'état 10
    tCHAR                décalage et aller à l'état 11
    tSTRING              décalage et aller à l'état 12
    tID                  décalage et aller à l'état 13
    tIF                  décalage et aller à l'état 14
    tWHILE               décalage et aller à l'état 15
    tFOR                 décalage et aller à l'état 16
    tEND_OF_INSTRUCTION  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 7 (Instrs)

    Instrs      aller à l'état 34
    Instr       aller à l'état 19
    Block       aller à l'état 20
    Prefix      aller à l'état 21
    Type        aller à l'état 22
    Definition  aller à l'état 23
    Assignment  aller à l'état 24
    For         aller à l'état 25
    If          aller à l'état 26
    While       aller à l'état 27


État 20

    6 Instrs: Block . Instrs

    tINTEGER             décalage et aller à l'état 9
    tCONSTANT            décalage et aller à l'état 10
    tCHAR                décalage et aller à l'état 11
    tSTRING              décalage et aller à l'état 12
    tID                  décalage et aller à l'état 13
    tIF                  décalage et aller à l'état 14
    tWHILE               décalage et aller à l'état 15
    tFOR                 décalage et aller à l'état 16
    tEND_OF_INSTRUCTION  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 7 (Instrs)

    Instrs      aller à l'état 35
    Instr       aller à l'état 19
    Block       aller à l'état 20
    Prefix      aller à l'état 21
    Type        aller à l'état 22
    Definition  aller à l'état 23
    Assignment  aller à l'état 24
    For         aller à l'état 25
    If          aller à l'état 26
    While       aller à l'état 27


État 21

   19 Definition: Prefix . tID
   20           | Prefix . Assignment

    tID  décalage et aller à l'état 36

    Assignment  aller à l'état 37


État 22

   14 Prefix: Type .

    $défaut  réduction par utilisation de la règle 14 (Prefix)


État 23

    8 Instr: Definition . tEND_OF_INSTRUCTION

    tEND_OF_INSTRUCTION  décalage et aller à l'état 38


État 24

    9 Instr: Assignment . tEND_OF_INSTRUCTION

    tEND_OF_INSTRUCTION  décalage et aller à l'état 39


État 25

   13 Block: For .

    $défaut  réduction par utilisation de la règle 13 (Block)


État 26

   11 Block: If .

    $défaut  réduction par utilisation de la règle 11 (Block)


État 27

   12 Block: While .

    $défaut  réduction par utilisation de la règle 12 (Block)


État 28

   15 Prefix: tCONSTANT Type .

    $défaut  réduction par utilisation de la règle 15 (Prefix)


État 29

   21 Assignment: tID tASSIGN . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 43


État 30

   26 If: tIF tBEGIN_PARENTHESIS . Expr tEND_PARENTHESIS If_act Body_if
   27   | tIF tBEGIN_PARENTHESIS . Expr tEND_PARENTHESIS If_act Body_if tELSE Body_if

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 44


État 31

   29 While: tWHILE tBEGIN_PARENTHESIS . Expr tEND_PARENTHESIS Body

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 45


État 32

   24 For: tFOR tBEGIN_PARENTHESIS . Assignment tEND_OF_INSTRUCTION Expr tEND_OF_INSTRUCTION Assignment tEND_PARENTHESIS Body
   25    | tFOR tBEGIN_PARENTHESIS . Assignment Expr tEND_OF_INSTRUCTION Assignment_sugar tEND_PARENTHESIS Body

    tID  décalage et aller à l'état 13

    Assignment  aller à l'état 46


État 33

    2 Body: tBEGIN_BLOCK Instrs tEND_BLOCK .

    $défaut  réduction par utilisation de la règle 2 (Body)


État 34

    5 Instrs: Instr Instrs .

    $défaut  réduction par utilisation de la règle 5 (Instrs)


État 35

    6 Instrs: Block Instrs .

    $défaut  réduction par utilisation de la règle 6 (Instrs)


État 36

   19 Definition: Prefix tID .
   21 Assignment: tID . tASSIGN Expr

    tASSIGN  décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 19 (Definition)


État 37

   20 Definition: Prefix Assignment .

    $défaut  réduction par utilisation de la règle 20 (Definition)


État 38

    8 Instr: Definition tEND_OF_INSTRUCTION .

    $défaut  réduction par utilisation de la règle 8 (Instr)


État 39

    9 Instr: Assignment tEND_OF_INSTRUCTION .

    $défaut  réduction par utilisation de la règle 9 (Instr)


État 40

   30 Expr: tNUMBER .

    $défaut  réduction par utilisation de la règle 30 (Expr)


État 41

   32 Expr: tID .

    $défaut  réduction par utilisation de la règle 32 (Expr)


État 42

   31 Expr: tMINUS . tNUMBER

    tNUMBER  décalage et aller à l'état 47


État 43

   21 Assignment: tID tASSIGN Expr .
   33 Expr: Expr . tPLUS Expr
   34     | Expr . tMINUS Expr
   35     | Expr . tMULTIPLY Expr
   36     | Expr . tDIVIDE Expr
   37     | Expr . tGT Expr
   38     | Expr . tGTE Expr
   39     | Expr . tLT Expr
   40     | Expr . tLTE Expr
   41     | Expr . tEQUALITY Expr

    tPLUS      décalage et aller à l'état 48
    tMINUS     décalage et aller à l'état 49
    tMULTIPLY  décalage et aller à l'état 50
    tDIVIDE    décalage et aller à l'état 51
    tGT        décalage et aller à l'état 52
    tGTE       décalage et aller à l'état 53
    tLT        décalage et aller à l'état 54
    tLTE       décalage et aller à l'état 55
    tEQUALITY  décalage et aller à l'état 56

    tMINUS    [réduction par utilisation de la règle 21 (Assignment)]
    $défaut  réduction par utilisation de la règle 21 (Assignment)


État 44

   26 If: tIF tBEGIN_PARENTHESIS Expr . tEND_PARENTHESIS If_act Body_if
   27   | tIF tBEGIN_PARENTHESIS Expr . tEND_PARENTHESIS If_act Body_if tELSE Body_if
   33 Expr: Expr . tPLUS Expr
   34     | Expr . tMINUS Expr
   35     | Expr . tMULTIPLY Expr
   36     | Expr . tDIVIDE Expr
   37     | Expr . tGT Expr
   38     | Expr . tGTE Expr
   39     | Expr . tLT Expr
   40     | Expr . tLTE Expr
   41     | Expr . tEQUALITY Expr

    tEND_PARENTHESIS  décalage et aller à l'état 57
    tPLUS             décalage et aller à l'état 48
    tMINUS            décalage et aller à l'état 49
    tMULTIPLY         décalage et aller à l'état 50
    tDIVIDE           décalage et aller à l'état 51
    tGT               décalage et aller à l'état 52
    tGTE              décalage et aller à l'état 53
    tLT               décalage et aller à l'état 54
    tLTE              décalage et aller à l'état 55
    tEQUALITY         décalage et aller à l'état 56


État 45

   29 While: tWHILE tBEGIN_PARENTHESIS Expr . tEND_PARENTHESIS Body
   33 Expr: Expr . tPLUS Expr
   34     | Expr . tMINUS Expr
   35     | Expr . tMULTIPLY Expr
   36     | Expr . tDIVIDE Expr
   37     | Expr . tGT Expr
   38     | Expr . tGTE Expr
   39     | Expr . tLT Expr
   40     | Expr . tLTE Expr
   41     | Expr . tEQUALITY Expr

    tEND_PARENTHESIS  décalage et aller à l'état 58
    tPLUS             décalage et aller à l'état 48
    tMINUS            décalage et aller à l'état 49
    tMULTIPLY         décalage et aller à l'état 50
    tDIVIDE           décalage et aller à l'état 51
    tGT               décalage et aller à l'état 52
    tGTE              décalage et aller à l'état 53
    tLT               décalage et aller à l'état 54
    tLTE              décalage et aller à l'état 55
    tEQUALITY         décalage et aller à l'état 56


État 46

   24 For: tFOR tBEGIN_PARENTHESIS Assignment . tEND_OF_INSTRUCTION Expr tEND_OF_INSTRUCTION Assignment tEND_PARENTHESIS Body
   25    | tFOR tBEGIN_PARENTHESIS Assignment . Expr tEND_OF_INSTRUCTION Assignment_sugar tEND_PARENTHESIS Body

    tNUMBER              décalage et aller à l'état 40
    tID                  décalage et aller à l'état 41
    tEND_OF_INSTRUCTION  décalage et aller à l'état 59
    tMINUS               décalage et aller à l'état 42

    Expr  aller à l'état 60


État 47

   31 Expr: tMINUS tNUMBER .

    $défaut  réduction par utilisation de la règle 31 (Expr)


État 48

   33 Expr: Expr tPLUS . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 61


État 49

   34 Expr: Expr tMINUS . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 62


État 50

   35 Expr: Expr tMULTIPLY . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 63


État 51

   36 Expr: Expr tDIVIDE . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 64


État 52

   37 Expr: Expr tGT . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 65


État 53

   38 Expr: Expr tGTE . Expr

    tNUMBER  décalage et aller à l'état 40
    tID      décalage et aller à l'état 41
    tMINUS   décalage et aller à l'état 42

    Expr  aller à l'état 66


État 54

   39 Expr: Expr tLT . Expr
